--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,35 +1,25 @@
 <resources>
-    <string name="app_name">省省联盟</string>
-    <string name="title_home">首页</string>
-    <string name="title_shop">团购</string>
-    <string name="title_consult">咨询</string>
-    <string name="title_notifications">我的</string>
-    <string name="messages_header">Messages</string>
-    <string name="sync_header">Sync</string>
-    <string name="explain_content">1. 完成支付可获得服务券1张，请前往汽车店进行消费，有效期29天！（过期自动退款，可随时申请退款）
+    <string name="app_name" translatable="false">省省联盟</string>
+    <string name="title_home" translatable="false">首页</string>
+    <string name="title_shop" translatable="false">团购</string>
+    <string name="title_consult" translatable="false">咨询</string>
+    <string name="title_notifications" translatable="false">我的</string>
+    <string name="messages_header" translatable="false">Messages</string>
+    <string name="sync_header" translatable="false">Sync</string>
+    <string name="explain_content" translatable="false">1. 完成支付可获得服务券1张，请前往汽车店进行消费，有效期29天！（过期自动退款，可随时申请退款）
         \n2. 服务费包含：整车冲洗，喷洒泡沫，车身擦拭，内部除尘，不含虫尸、柏油等。
         \n3. 请提前致电门店预约！
         \n4. 部分MVP、大型SUV等特殊车型需向门店额外支付费用
 
     </string>
-    <string name="dialog_rationale_ask_again">APP缺少正常运行时所必须的权限，请在系统设置内允许APP获得相应权限：</string>
-    <string name="permiss_read_phone">设备信息权限：用于账号信息验证，以保障交易安全。</string>
-    <string name="permiss_call_phone">拨打电话权限：用于一键拨打客服电话。</string>
-    <string name="permiss_location">定位权限：用于获取周边特惠服务，如优惠加油站，洗车等。</string>
-    <string name="permiss_write_store">存储权限：以实现保存二维码图片功能。</string>
-    <string name="permiss_write_stor2">读取文件权限：以访问相册功能。</string>
-    <string name="permiss_take_phone">拍照和存储权限：以访问相机拍照功能和照片存储功能。</string>
-    <string name="permiss_write_store1">存储权限：以实现保存升级安装包。</string>
+    <string name="dialog_rationale_ask_again" translatable="false">APP缺少正常运行时所必须的权限，请在系统设置内允许APP获得相应权限：</string>
+    <string name="permiss_read_phone" translatable="false">设备信息权限：用于账号信息验证，以保障交易安全。</string>
+    <string name="permiss_call_phone" translatable="false">拨打电话权限：用于一键拨打客服电话。</string>
+    <string name="permiss_location" translatable="false">定位权限：用于获取周边特惠服务，如优惠加油站，洗车等。</string>
+    <string name="permiss_write_store" translatable="false">存储权限：以实现保存二维码图片功能。</string>
+    <string name="permiss_write_stor2" translatable="false">读取文件权限：以访问相册功能。</string>
+    <string name="permiss_take_phone" translatable="false">拍照和存储权限：以访问相机拍照功能和照片存储功能。</string>
+    <string name="permiss_write_store1" translatable="false">存储权限：以实现保存升级安装包。</string>
 
-    <!-- Messages Preferences -->
-    <string name="signature_title">Your signature</string>
-    <string name="reply_title">Default reply action</string>
-
-    <!-- Sync Preferences -->
-    <string name="sync_title">Sync email periodically</string>
-    <string name="attachment_title">Download incoming attachments</string>
-    <string name="attachment_summary_on">Automatically download attachments for incoming emails
-    </string>
-    <string name="attachment_summary_off">Only download attachments when manually requested</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="BUGLY_APP_ID" translatable="false">1d8a84c8b0</string>
 </resources>
